90/100 i can finally rest (maine iar pe treaba :(((( ) Ultimele 2 teste bro